--- a/Checkpoint 1/index.html
+++ b/Checkpoint 1/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name = "robots" content="INDEX , FOLLOW"> 
     <title>Notes App</title>
     <!-- External CSS included  -->
     <link rel="stylesheet" href="index.css">
